# TelGd

./: .gitignore  README.md  pyproject.toml  teste.session
gdrive/: List_Gdrive1.py  List_gdrive.py
telegram/: data_telegram.py  info.py  testeOk.py
